[package]
name = "character_frequency"
version = "0.1.1"
edition = "2021"
description = "Simple library for counting character frequencies in a string concurrently"
repository = "https://github.com/Tikitikitikidesuka/character_frequency"
license = "MIT"
license-file = "LICENSE.md"

keywords = [
    "frequency",
    "characters",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"